fix cross browser compatibility with text overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -249,6 +249,44 @@ p {
   background-position: center;
 }
 
+.truncate-overflow {
+  --lh: 1.4rem;
+  --max-lines: 4;
+  max-height: calc(var(--lh) * var(--max-lines));
+  overflow: hidden;
+}
+
+.truncate-overflow::after {
+  content: "";
+  position: absolute;
+  right: 0; /* note: not using bottom */
+  width: 1rem;
+  height: 1rem;
+  background: white;
+}
+
+.truncate-overflow::before {
+  content: "...";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.block-with-text {
+  display: block;
+  display: -webkit-box;
+  max-width: 100%;
+  height: 43px;
+  margin: 0 auto;
+  font-size: 14px;
+  line-height: 1;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
 @media only screen and (min-width: 1280px) {
   .impact-background {
     background-repeat: no-repeat;
